src/surfaceitem_wayland.h
@@ -39,7 +39,6 @@ private Q_SLOTS:
     void handleSurfaceCommitted();
     void handleSurfaceSizeChanged();
 
-    void handleChildSubSurfaceAdded(KWaylandServer::SubSurfaceInterface *child);
     void handleChildSubSurfaceRemoved(KWaylandServer::SubSurfaceInterface *child);
     void handleChildSubSurfacesChanged();
     void handleSubSurfacePositionChanged();
@@ -48,6 +47,8 @@ protected:
     SurfacePixmap *createPixmap() override;
 
 private:
+    SurfaceItemWayland *getOrCreateSubSurfaceItem(KWaylandServer::SubSurfaceInterface *s);
+
     QPointer<KWaylandServer::SurfaceInterface> m_surface;
     QHash<KWaylandServer::SubSurfaceInterface *, SurfaceItemWayland *> m_subsurfaces;
 };
